# start2-a64-emmc

JTAG/: JTAG.c  Makefile
LED/: LED.c  Makefile
SPISlaveDevice/: Makefile  SPISlaveDevice.c
START2_20180607/: CMakeLists.txt  KernelInterface.h  main.c
START2_20181029/: CMakeLists.txt  Jpeg.c  KernelSpi.c  KernelVideo.c  Scan.c  Scan.h  Update.c  main.c  main.h
VIDEO/: Makefile  VIDEO.c
